@@ -36,7 +36,8 @@ setup(
     license='MIT',
     description='Generate and work with holidays in Python',
     long_description=codecs.open('README.rst', encoding='utf-8').read(),
-    install_requires=['python-dateutil', 'six', 'convertdate'],
+    install_requires=['python-dateutil', 'six', 'convertdate',
+                      'korean_lunar_calendar'],
     platforms='any',
     classifiers=[
         'Development Status :: 4 - Beta',
