@@ -6,6 +6,7 @@ Released ???????? ??, ????
 - Support for Spain (piliamaurizio, jbroudou, dr-p, gerardo15)
 - Support for Turkey (cemkaragozlu)
 - Support for Korea (1kko, dr-p)
+- Support for Vietnam (1kko, dr-p)
 - Mexico fix (Rosi2143, dr-p)
 - Croatia fix (sebojanko, dr-p)
 - US Georgia fix (jbroudou, dr-p)
